--- a/src/app/pages/accounts-page/account-index/accounts.component.html
+++ b/src/app/pages/accounts-page/account-index/accounts.component.html
@@ -4,7 +4,7 @@
     <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
   </div>
 
-  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" [routerLink]="['/accounts', 'add']"><md-icon>add</md-icon></button>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
 
   <md-card class="entity-index__card">
     <md-card-content class="entity-index__card__content">
@@ -37,4 +37,13 @@
 
     </md-card-content>
   </md-card>
+</div>
+
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
+  <account-add-new class="modal-center"
+                [mode]="modes.Add"
+                [entity]="entity"
+                (save)="service.createEntity($event)"
+                (cancel)="closeAddMode()">
+  </account-add-new>
 </div>
