--- a/src/app/shared/components/add-schedule/add-schedule.component.html
+++ b/src/app/shared/components/add-schedule/add-schedule.component.html
@@ -35,17 +35,17 @@
 
     <div style="margin-top: 15px;" class="flex-custom">
       <md-input-container [class.error]="formInvalid && !scheduleToAdd.start">
-        <input required md-input placeholder="Start" (keyup)="startChanged()" (keydown)="isNumeric($event)" name="start" [(ngModel)]="scheduleToAdd.start" type="text">
+        <input required md-input placeholder="Start" (keydown)="isNumeric($event)" name="start" [(ngModel)]="scheduleToAdd.start" type="text">
         <div class="helper-text">Start of period (0 is immediate)</div>
       </md-input-container>
 
       <md-input-container>
-        <input #endField md-input placeholder="End" (keyup)="endChanged()" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
+        <input #endField md-input placeholder="End" (keydown)="isNumeric($event)" name="end" [(ngModel)]="scheduleToAdd.end" type="text">
         <div class="helper-text">Ends & switches to next product schedule</div>
       </md-input-container>
     </div>
     <md-input-container style="margin-top: 15px;" [class.error]="formInvalid && !scheduleToAdd.period">
-      <input required md-input placeholder="Period" (keyup)="periodChanged()" (keydown)="isNumeric($event)" name="period" [(ngModel)]="scheduleToAdd.period" type="text">
+      <input required md-input placeholder="Period" (keydown)="isNumeric($event)" name="period" [(ngModel)]="scheduleToAdd.period" type="text">
       <div class="helper-text">Recurring billing & shipping period</div>
     </md-input-container>
 
