--- a/src/app/pages/components/table-memory/table-memory.component.html
+++ b/src/app/pages/components/table-memory/table-memory.component.html
@@ -1,5 +1,5 @@
 <div class="entity-view__table-component">
-  <div class="entity-view__table-component__header entity-view__table-component__header--homepage">
+  <div *ngIf="showHeader" class="entity-view__table-component__header entity-view__table-component__header--homepage">
     <div class="entity-view__table-component__header__title">{{textOptions.title || 'Associated ' + title}}</div>
     <md-input-container *ngIf="filterEnabled" class="entity-view__table-component__header__filter">
       <input md-input placeholder="Filter" [(ngModel)]="filterString" type="text">
@@ -19,7 +19,7 @@
         {{params.label}}
         <md-icon *ngIf="params.sortApplied">{{params.sortOrder === 'asc' ? 'keyboard_arrow_up' : 'keyboard_arrow_down'}}</md-icon>
       </th>
-      <th></th>
+      <th *ngIf="showMenuOptions"></th>
     </tr>
     </thead>
 
@@ -31,7 +31,7 @@
         </div>
         <ng-template #noCode>{{params.mappingFunction(entity)}}</ng-template>
       </td>
-      <td>
+      <td *ngIf="showMenuOptions">
         <md-icon [md-menu-trigger-for]="actionsMenu">more_vert</md-icon>
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item (click)="view.emit(entity)">{{textOptions.viewOptionText || 'View ' + title}}</button>
@@ -47,6 +47,7 @@
   <div *ngIf="!entities || entities.length === 0" class="entity-view__no-results entity-view__no-results--table">{{textOptions.noDataText || 'No ' + title + 's found'}}</div>
 
   <table-pagination
+    *ngIf="showPagination"
     [limit]="limit"
     [paginationValues]="paginationValues"
     [previousDisabled]="page <= 0"
