--- a/src/app/reports/transactions-report/transactions-report.component.scss
+++ b/src/app/reports/transactions-report/transactions-report.component.scss
@@ -1,7 +1,20 @@
+.report {
+  &__title {
+    font-size: 32px;
+    padding: 20px 15px 10px;
+    color: #8D8888;
+  }
+}
+
 .filter-container {
-  padding: 15px;
+  padding: 0 15px 10px;
 }
 
 .chart-container {
-  margin: 0 15px 15px;
+  margin: 15px;
+}
+
+table-memory {
+  display: block;
+  margin: 5px 5px 20px;
 }
