--- a/src/app/shared/components/advanced-filter/advanced-filter.component.html
+++ b/src/app/shared/components/advanced-filter/advanced-filter.component.html
@@ -52,7 +52,7 @@
     </div>
   </div>
 
-  <div class="advanced-filter__advanced" [class.advanced-filter__advanced--inactive]="!advanced">
+  <div class="advanced-filter__advanced" [class.advanced-filter__advanced--inactive]="!advanced" [class.advanced-filter__advanced--overflow-visible]="visible">
     <div class="advanced-filter__advanced__row">
 
       <div class="advanced-filter__advanced__row--flex">
