--- a/src/assets/scss/_reports-table.scss
+++ b/src/assets/scss/_reports-table.scss
@@ -6,7 +6,9 @@
   &__title {
     display: flex;
     align-items: center;
-    padding: 15px 5px 15px 15px;
+    padding: 10px 5px 10px 15px;
+    font-size: 20px;
+    color: rgba(0,0,0,0.87);;
 
     md-input {
       margin-left: auto;
@@ -38,7 +40,7 @@
           position: relative;
           font-size: 12px;
           font-weight: normal;
-          color: rgba(0, 0, 0, 0.5);
+          color: rgba(0,0,0,0.54);
           cursor: pointer;
 
           &:first-of-type {
@@ -64,7 +66,8 @@
         }
 
         td {
-          font-size: 12px;
+          font-size: 13px;
+          color: rgba(0,0,0,0.87);
           cursor: pointer;
 
           &:first-of-type {
@@ -90,5 +93,12 @@
   md-spinner {
     margin: auto;
     padding: 20px;
+  }
+
+  &__pagination {
+
+    &--right {
+      margin-left: auto !important;
+    }
   }
 }
