--- a/src/assets/scss/_advanced-filter.scss
+++ b/src/assets/scss/_advanced-filter.scss
@@ -3,7 +3,7 @@ $color-orange: #F16C00;
 .advanced-filter {
   box-shadow: 0 0 5px rgba(0,0,0,0.2);
   box-sizing: border-box;
-  padding-top: 20px;
+  padding-top: 5px;
   background: white;
 
   &__content {
@@ -92,14 +92,14 @@ $color-orange: #F16C00;
   &__group-by {
     position: relative;
     display: inline-block;
-    margin: 0 20px;
+    margin: -2px 20px 0;
 
     dropdown-component {
       position: static;
     }
 
     @media only screen and (max-width: 1440px) {
-      margin: -10px 10px;
+      margin: -12px 10px;
     }
   }
 
