Add merchant provider daily cap

--- a/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
+++ b/src/app/pages/merchant-providers-page/merchant-provider-view/merchant-provider-add-new/merchant-provider-add-new.component.html
@@ -43,6 +43,10 @@
       </md-input-container>
 
       <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
+        <input [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="Daily Cap ($)" name="dailyCap" [(ngModel)]="entity.processing.transactionCounts.daily" type="text">
+      </md-input-container>
+
+      <md-input-container class="entity-view__card__content__item merchant-provider-view__details__input--numbers">
         <input [disabled]="mode === modes.View" (keydown)="isFloatNumeric($event)" md-input placeholder="Transaction Fee ($)" name="transactionFee" [(ngModel)]="entity.processing.transactionFee" type="text">
       </md-input-container>
 
