Add transactions report page

--- a/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
+++ b/src/app/pages/dashboard-page/dashboard-reports/dashboard-reports.component.html
@@ -12,6 +12,14 @@
     </div>
   </div>
 
+  <div class="dashboard__reports__item" [routerLink]="['/reports', 'summary']">
+    <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
+    <div class="dashboard__reports__item__content">
+      <div class="dashboard__reports__item__content__main">Summary Report</div>
+      <div class="dashboard__reports__item__content__sub">View summary information on transactions</div>
+    </div>
+  </div>
+
   <div class="dashboard__reports__item" [routerLink]="['/reports', 'transaction']">
     <img class="dashboard__reports__item__image" src="/assets/images/starticon.svg">
     <div class="dashboard__reports__item__content">
