--- a/src/assets/scss/_entity-view.scss
+++ b/src/assets/scss/_entity-view.scss
@@ -368,6 +368,7 @@ $blue-color: #4A90E2;
     padding-bottom: 20px;
     background: white;
     box-shadow: 0 0 3px rgba(0,0,0,0.2);
+    overflow: auto;
 
     &--homepage {
       margin: 5px;
