--- a/src/app/reports/summary-report/summary-report.component.html
+++ b/src/app/reports/summary-report/summary-report.component.html
@@ -1,4 +1,8 @@
-<div class="report__title">Transactions Report</div>
+<div class="report__title">Summary Report</div>
+
+<div class="chart-container">
+  <transaction-summary-chart [date]="dateMap" [filters]="immutableFilterTerms"></transaction-summary-chart>
+</div>
 
 <div class="filter-container">
   <advanced-filter
@@ -36,6 +40,7 @@
   [page]="page"
   [paginationString]="getPaginationString()"
   [showFilter]="false"
+  (cellClicked)="cellClicked($event)"
   (next)="fetchNext()"
   (previous)="fetchPrevious()"
   (updateLimit)="updateLimit($event)"
