--- a/src/assets/scss/_reports-table.scss
+++ b/src/assets/scss/_reports-table.scss
@@ -3,6 +3,10 @@
   background: white;
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 
+  &__table-container {
+    overflow: auto;
+  }
+
   &__title {
     display: flex;
     align-items: center;
