--- a/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
+++ b/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
@@ -1,43 +1,48 @@
-<button md-fab class="entity-index__button--add" *ngIf="hasWritePermission()"> <md-icon>add</md-icon></button>
+<div class="entity-index">
+  <div class="entity-index__title">
+    Access Keys
+    <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  </div>
 
-<div class="entity-index__title">
-  Access Keys
-  <md-input [(ngModel)]="filterValue" placeholder="Filter"></md-input>
+  <button md-icon-button color="primary" *ngIf="hasWritePermission()" class="entity-index__add" (click)="openAddMode()"><md-icon>add</md-icon></button>
+
+  <md-card class="entity-index__card">
+    <md-card-content class="entity-index__card__content">
+
+      <entities-table
+        [data]="entities"
+        [columnParams]="columnParams"
+        [filterString]="filterValue"
+        [serverError]="serverError"
+        (selected)="viewEntity($event.id)"
+
+        [service]="service"
+        (viewClicked)="viewEntity($event.id)"
+        (copyClicked)="copyEntity($event.id)"
+        (exportClicked)="exportEntity($event.id)"
+        (editClicked)="editEntity($event.id)"
+        (deleteClicked)="deleteEntity($event.id)"
+        (refreshData)="refreshData()"
+
+        [limit]="limit"
+        [paginationValues]="paginationValues"
+        [previousDisabled]="page <= 0"
+        [nextDisabled]="!hasMorePages()"
+        (previous)="previous()"
+        (next)="next()"
+        (updateLimit)="updateLimit($event)">
+      </entities-table>
+
+    </md-card-content>
+  </md-card>
 </div>
 
-<table class="highlight">
-  <thead class="entity-index__table__header">
-  <tr>
-    <th data-field="accessKey">Access Key</th>
-    <th data-field="secretKey">Secret Key</th>
-    <th>Actions</th>
-  </tr>
-  </thead>
 
-  <tbody>
-  <tr *ngFor="let entity of (entities | filterEntities: filterValue)">
-    <td>{{entity.accessKey}}</td>
-    <td>{{entity.secretKey}}</td>
-    <td>
-      <table-actions
-        [service]="service"
-        (viewClicked)="viewEntity(entity.id)"
-        (copyClicked)="copyEntity(entity.id)"
-        (exportClicked)="exportEntity(entity.id)"
-        (editClicked)="editEntity(entity.id)"
-        (deleteClicked)="deleteEntity(entity.id)">
-      </table-actions>
-    </td>
-  </tr>
-  </tbody>
-</table>
-
-<table-pagination
-  [limit]="limit"
-  [paginationValues]="paginationValues"
-  [previousDisabled]="page <= 0"
-  [nextDisabled]="!hasMorePages()"
-  (previous)="previous()"
-  (next)="next()"
-  (updateLimit)="updateLimit($event)">
-</table-pagination>
+<div *ngIf="addMode" (click)="overlayClicked($event)" class="full-overlay">
+  <access-key-add-new class="modal-center"
+                      [mode]="modes.Add"
+                      [entity]="entity"
+                      (save)="service.createEntity($event)"
+                      (cancel)="closeAddMode()">
+  </access-key-add-new>
+</div>
