Fix product schedules labels

--- a/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
+++ b/src/app/pages/product-schedule-page/product-schedule-view/product-schedule-view.component.html
@@ -42,8 +42,7 @@
           <add-schedule #addScheduleComponent (addSchedule)="addScheduleToProduct($event)"></add-schedule>
         </div>
 
-        <table-memory [title]="'Schedule'"
-                      [data]="entity.schedules"
+        <table-memory [data]="entity.schedules"
                       [textOptions]="tableTexts"
                       [associationEnabled]="false"
                       [columnParams]="scheduleColumnParams"
