--- a/src/app/shared/components/add-schedule/add-schedule.component.html
+++ b/src/app/shared/components/add-schedule/add-schedule.component.html
@@ -1,6 +1,6 @@
 <div class="entity-view__card">
   <div class="entity-view__card__header">
-    <div class="entity-view__card__header__title">{{editMode ? 'Edit Schedule' : 'Add Product to Schedule' }}</div>
+    <div class="entity-view__card__header__title">{{editMode ? 'Edit Cycle' : 'Add Cycle' }}</div>
   </div>
 
   <form #scheduleInputForm="ngForm" class="entity-view__card__content product-schedule-view__container">
