Add access keys view/edit component

--- a/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
+++ b/src/app/pages/access-keys-page/access-keys-index/access-keys.component.html
@@ -38,6 +38,7 @@
         <md-menu #actionsMenu="mdMenu" x-position="before">
           <button md-menu-item (click)="viewAccessKey(entity)">View Access Key</button>
           <button md-menu-item (click)="editAccessKey(entity)">Edit Access Key</button>
+          <button md-menu-item (click)="deleteEntity(entity.id)">Delete Access Key</button>
         </md-menu>
       </td>
     </tr>
