Fix build problems

--- a/src/app/reports/affiliate-report/affiliate-report.component.html
+++ b/src/app/reports/affiliate-report/affiliate-report.component.html
@@ -18,7 +18,7 @@
 </div>
 
 <table-memory
-  [title]="affiliate"
+  [title]="'affiliate'"
   [data]="reportsTotal"
   [columnParams]="columnParamsTotal"
   [associationEnabled]="false"
